--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "15.7.0",
+    "@reduxjs/toolkit": "^1.9.2",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -20,7 +22,10 @@
     "@nrwl/linter": "15.7.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.7.0",
+    "@nrwl/vite": "^15.7.0",
     "@nrwl/workspace": "15.7.0",
+    "@swc/core": "^1.2.173",
+    "@swc/jest": "0.2.20",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.11.9",
@@ -28,6 +33,8 @@
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/ui": "^0.25.8",
     "babel-jest": "28.1.1",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
@@ -40,12 +47,18 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
+    "jsdom": "~20.0.3",
     "nx": "15.7.0",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "sass": "1.55.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "vite": "^4.0.1",
+    "vite-plugin-dts": "~1.7.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.25.8"
   }
 }
