--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.9",
     "@nrwl/next": "15.7.0",
     "@reduxjs/toolkit": "^1.9.2",
     "next": "13.1.1",
