build(next): Adding TailWindCss

--- a/apps/rental-application-client-web/project.json
+++ b/apps/rental-application-client-web/project.json
@@ -10,7 +10,8 @@
       "defaultConfiguration": "production",
       "options": {
         "root": "apps/rental-application-client-web",
-        "outputPath": "dist/apps/rental-application-client-web"
+        "outputPath": "dist/apps/rental-application-client-web",
+        "postcssConfig": "apps/rental-application-client-web/postcss.config.js"
       },
       "configurations": {
         "development": {
