--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.9",
+    "@nrwl/cli": "^15.7.0",
     "@nrwl/next": "15.7.0",
     "@reduxjs/toolkit": "^1.9.2",
     "next": "13.1.1",
@@ -38,6 +39,7 @@
     "@typescript-eslint/parser": "^5.36.1",
     "@vitejs/plugin-react": "^3.0.0",
     "@vitest/ui": "^0.25.8",
+    "autoprefixer": "^10.4.13",
     "babel-jest": "28.1.1",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
@@ -52,9 +54,11 @@
     "jest-environment-jsdom": "28.1.1",
     "jsdom": "~20.0.3",
     "nx": "15.7.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "sass": "1.55.0",
+    "tailwindcss": "^3.2.6",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
