--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          main-branch-name: 'develop'
+      - name: "create-main-branch" #to create a branch in the vm to execute
+        run: "git branch --track develop origin/develop"
       - uses: nrwl/nx-set-shas@v3
       - run: npm ci
       - run: npx nx format:check
