--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          main-branch-name: 'develop'  
       - uses: nrwl/nx-set-shas@v3
+        with:
+          main-branch-name: 'develop'  
       - run: npm ci
       - run: npx nx format:check
       - run: npx nx affected --target=lint --parallel=3
