--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "dev": "npx nx serve rental-application-client-web --open"
   },
   "private": true,
   "dependencies": {
@@ -14,6 +15,7 @@
     "@nrwl/next": "15.7.0",
     "@reduxjs/toolkit": "^1.9.2",
     "next": "13.1.1",
+    "pocketbase": "^0.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
