--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@rch/pocketbase": ["libs/pocketbase/src/index.ts"],
       "@rch/store": ["libs/store/src/index.ts"]
     }
   },
