--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@heroicons/react": "^2.0.15",
     "@mui/material": "^5.11.9",
     "@nrwl/cli": "^15.7.0",
     "@nrwl/next": "15.7.0",
     "@reduxjs/toolkit": "^1.9.2",
+    "leaflet": "^1.9.3",
     "next": "13.1.1",
     "pocketbase": "^0.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.0",
     "react-redux": "^8.0.5",
     "tslib": "^2.3.0"
   },
@@ -40,6 +43,7 @@
     "@swc/jest": "0.2.20",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
+    "@types/leaflet": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
