--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,10 +15,12 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@rch/core": ["libs/core/src/index.ts"],
       "@rch/map": ["libs/map/src/index.ts"],
       "@rch/pocketbase": ["libs/pocketbase/src/index.ts"],
       "@rch/store": ["libs/store/src/index.ts"],
-      "@rch/ui-web": ["libs/ui-web/src/index.ts"]
+      "@rch/ui-web": ["libs/ui-web/src/index.ts"],
+      "@rch/types": ["libs/core/src/types/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
