--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nrwl/cli": "^15.7.0",
     "@nrwl/next": "15.7.0",
     "@reduxjs/toolkit": "^1.9.2",
+    "classnames": "^2.3.2",
     "leaflet": "^1.9.3",
     "next": "13.1.1",
     "pocketbase": "^0.10.2",
