--- a/libs/features/project.json
+++ b/libs/features/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "ui-web",
+  "name": "features",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/ui-web/src",
+  "sourceRoot": "libs/features/src",
   "projectType": "library",
   "tags": [],
   "targets": {
@@ -9,14 +9,14 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/ui-web/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": ["libs/features/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/ui-web/jest.config.ts",
+        "jestConfig": "libs/features/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
