--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,7 +22,7 @@
       "@rch/shared": ["libs/shared/src/index.ts"],
       "@rch/store": ["libs/store/src/index.ts"],
       "@rch/types": ["libs/core/src/types/index.ts"],
-      "@rch/ui-web": ["libs/ui-web/src/index.ts"]
+      "@rch/features": ["libs/features/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
